--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+  <div class="logo">
+    <img src="img/" alt="Logo" class="logo-img">
+  </div>
+<nav>
+  <a href="#home1">Início</a> 
+  <a href="#produtos">Produtos</a>
+  <a href="#sobre">Sobre</a>
+  <a href="#carrinho" class="carrinho-link">
+  <i class="fas fa-shopping-cart"></i>
+  <span id="cart-count" class="cart-count">0</span></a>
+</nav>
+  <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</header>
+  <div class="mobile-menu" id="mobileMenu">
+  <a href="#home1">Início</a>
+  <a href="#produtos">Produtos</a>
+  <a href="#sobre">Sobre</a>
+  <a href="#carrinho" class="carrinho-link">
+   <i class="fas fa-shopping-cart"></i>
+   <span id="cart-count-mobile" class="cart-count">0</span></a>
+</div>
 </body>
 </html>
