Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <img src="img/" alt="Logo" class="logo-img">
   </div>
 <nav>
-  <a href="#home1">Início</a> 
-  <a href="#produtos">Produtos</a>
+  <a href="#home">Início</a> 
+  <a href="#produto">Produtos</a>
   <a href="#sobre">Sobre</a>
+  <a href="#contato">Contato</a>
   <a href="#carrinho" class="carrinho-link">
   <i class="fas fa-shopping-cart"></i>
   <span id="cart-count" class="cart-count">0</span></a>
@@ -33,5 +34,9 @@
    <i class="fas fa-shopping-cart"></i>
    <span id="cart-count-mobile" class="cart-count">0</span></a>
 </div>
+<main>
+   <section id="home" class="pagina">
+   </section>
+</main>
 </body>
 </html>
