--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Trabalho</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
     <img src="img/" alt="Logo" class="logo-img">
   </div>
 <nav>
-  <a href="#home">Início</a> 
+  <a href="#home">Home</a> 
   <a href="#produto">Produtos</a>
   <a href="#sobre">Sobre</a>
   <a href="#contato">Contato</a>
@@ -27,15 +30,26 @@
   </div>
 </header>
   <div class="mobile-menu" id="mobileMenu">
-  <a href="#home1">Início</a>
+  <a href="#home1">Home</a>
   <a href="#produtos">Produtos</a>
   <a href="#sobre">Sobre</a>
   <a href="#carrinho" class="carrinho-link">
+  <a href="#contato">Contato</a>
    <i class="fas fa-shopping-cart"></i>
    <span id="cart-count-mobile" class="cart-count">0</span></a>
 </div>
 <main>
    <section id="home" class="pagina">
+      <h1>Início</h1>
+   </section>
+   <section id=produto" class="pagina">
+      <h1>Produtos</h1>
+   </section>
+   <section id="sobre" class="pagina">
+      <h1>Sobre</h1>
+   </section>
+   <section id="contato" class="pagina">
+      <h1>Contato</h1>
    </section>
 </main>
 <script src="js/script.js"></script>
