Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </header>
   <div class="mobile-menu" id="mobileMenu">
   <a href="#home1">Home</a>
-  <a href="#produtos">Produtos</a>
+  <a href="#produto">Produtos</a>
   <a href="#sobre">Sobre</a>
   <a href="#contato">Contato</a>
   <a href="#carrinho" class="carrinho-link">
