Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <section id="home" class="pagina">
       <h1>Início</h1>
    </section>
-   <section id=produto" class="pagina">
+   <section id="produto" class="pagina">
       <h1>Produtos</h1>
    </section>
    <section id="sobre" class="pagina">
