Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 </header>
   <div class="mobile-menu" id="mobileMenu">
-  <a href="#home1">Home</a>
+  <a href="#home">Home</a>
   <a href="#produto">Produtos</a>
   <a href="#sobre">Sobre</a>
   <a href="#contato">Contato</a>
