--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <div class="logo">
-    <img src="img/" alt="Logo" class="logo-img">
+    <img src="img/Logo.svg" alt="Logo" class="logo-img">
   </div>
 <nav>
   <a href="#home">Home</a> 
