--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <div class="logo">
-    <img src="img/c6539229ad5c57c313d95711a1e676db.svg" alt="Logo" class="logo-img">
+    <img src="img/logo.jpg" alt="Logo" class="logo-img">
   </div>
 <nav>
   <a href="#home">Home</a> 
