Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
       <h1>Contato</h1>
    </section>
 </main>
+  <footer id="rodape">
+  <p>&copy; 2023 CandyDreams. Developer by Lipe Dev. </p>
+  <div class="redes-sociais">
+    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://github.com/lipe9" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  </div>
+</footer>
 <script src="js/script.js"></script>
 </body>
 </html>
