--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    </section>
 </main>
   <footer id="rodape">
-  <p>&copy; 2023 CandyDreams. Developer by Lipe Dev. </p>
+  <p>&copy; Developer by Lipe Dev. </p>
   <div class="redes-sociais">
     <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="https://github.com/lipe9" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
