Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
       <h1>Contato</h1>
    </section>
 </main>
+  <!-- Mini Carrinho -->
+<div class="mini-carrinho" id="miniCarrinho">
+  <button id="fecharCarrinho" class="fechar-carrinho">X</button>
+  <h3>Seu Carrinho</h3>
+  <ul id="itensCarrinho"></ul>
+  <p>Total: <span id="totalCarrinho">R$ 0,00</span></p>
+  <a href="comprar.html" class="botao-destaque">Finalizar Compra</a>
+  <button id="limparCarrinho">
+    Limpar Carrinho
+  </button>
+</div>
+
   <footer id="rodape">
   <p>&copy; Developer by Lipe Dev. </p>
   <div class="redes-sociais">
