Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 </div>
 <main>
    <section id="home" class="pagina">
-      <h1>Início</h1>
+   <div id="notificacao-container"></div>
+    <h1>Início</h1>
    </section>
    <section id="produto" class="pagina">
       <h1>Produtos</h1>
