--- a/index.html
+++ b/index.html
@@ -44,7 +44,31 @@
     <h1>Início</h1>
    </section>
    <section id="produto" class="pagina">
-      <h1>Produtos</h1>
+      <h2>Nossos Produtos</h2>
+  <div class="produtos-container">
+
+    <div class="card-produto">
+      <img src="https://via.placeholder.com/250x200" alt="Produto 1">
+      <h3>Camisa Básica</h3>
+      <p class="preco">R$9,90</p>
+      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90">Comprar</button>
+    </div>
+
+    <div class="card-produto">
+      <img src="https://via.placeholder.com/250x200" alt="Produto 2">
+      <h3>Calça Jeans</h3>
+      <p class="preco">R$ 9,90</p>
+      <button class="btn-comprar" data-nome="Taco" data-preco="9.90">Comprar</button>
+    </div>
+
+    <div class="card-produto">
+      <img src="https://via.placeholder.com/250x200" alt="Produto 3">
+      <h3>Tênis Esportivo</h3>
+      <p class="preco">R$ 9,90</p>
+      <button class="btn-comprar" data-nome="Refri" data-preco="9.90">Comprar</button>
+    </div>
+
+  </div>
    </section>
    <section id="sobre" class="pagina">
       <h1>Sobre</h1>
