--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 <h2>Nossos Produtos</h2>
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 1">
-      <h3>Camisa Básica</h3>
+      <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90">Comprar</button>
     </div>
 
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 2">
-      <h3>Calça Jeans</h3>
+      <h3>Taco</h3>
       <p class="preco">R$ 9,90</p>
       <button class="btn-comprar" data-nome="Taco" data-preco="9.90">Comprar</button>
     </div>
 
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 3">
-      <h3>Tênis Esportivo</h3>
+      <h3>Refri</h3>
       <p class="preco">R$ 9,90</p>
       <button class="btn-comprar" data-nome="Refri" data-preco="9.90">Comprar</button>
     </div>
