--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    </section>
    <section id="produto" class="pagina">
     <h2>Nossos Produtos</h2>
-  <div class="produto-container">
+  <div class="produtos-container">
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 1">
       <h3>Sanduíche</h3>
