--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <h1>Início</h1>
    </section>
    <section id="produto" class="pagina">
-    <h2>Nossos Produtos</h2>
+  <h2>Nossos Produtos</h2> <!-- título fora da grid -->
+  
   <div class="produtos-container">
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 1">
@@ -67,9 +68,8 @@
       <p class="preco">R$ 9,90</p>
       <button class="btn-comprar" data-nome="Refri" data-preco="9.90">Comprar</button>
     </div>
-
   </div>
-   </section>
+</section>
    <section id="sobre" class="pagina">
       <h1>Sobre</h1>
    </section>
