Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h1>Início</h1>
    </section>
    <section id="produto" class="pagina">
-  <h2>Nossos Produtos</h2> <!-- título fora da grid -->
+  <h2 class="titulo-produtos">Nossos Produtos</h2>
   
   <div class="produtos-container">
     <div class="card-produto">
@@ -58,14 +58,14 @@
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 2">
       <h3>Taco</h3>
-      <p class="preco">R$ 9,90</p>
+      <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Taco" data-preco="9.90">Comprar</button>
     </div>
 
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 3">
       <h3>Refri</h3>
-      <p class="preco">R$ 9,90</p>
+      <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Refri" data-preco="9.90">Comprar</button>
     </div>
   </div>
