Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <h2 class="titulo-produtos">Nossos Produtos</h2>
   
   <div class="produtos-container">
+<h2 class="titulo-produtos">Nossos Produtos</h2>
     <div class="card-produto">
       <img src="https://via.placeholder.com/250x200" alt="Produto 1">
       <h3>Sanduíche</h3>
