Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <section id="produto" class="pagina">
   <div class="produtos-container">
     <div class="card-produto">
-      <img src="https://via.placeholder.com/250x200" alt="Produto 1">
+      <img src="https://placehold.co/600x400" alt="Produto 1">
       <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90">Comprar</button>
