--- a/index.html
+++ b/index.html
@@ -54,17 +54,23 @@
     </div>
 
     <div class="card-produto">
-      <img src="https://via.placeholder.com/250x200" alt="Produto 2">
+      <img src="https://placehold.co/600x400" alt="Produto 2">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Taco" data-preco="9.90">Comprar</button>
     </div>
 
     <div class="card-produto">
-      <img src="https://via.placeholder.com/250x200" alt="Produto 3">
+      <img src="https://placehold.co/600x400" alt="Produto 3">
       <h3>Refri</h3>
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Refri" data-preco="9.90">Comprar</button>
+    </div>
+<div class="card-produto">
+      <img src="https://placehold.co/600x400" alt="Produto 3">
+      <h3>Café</h3>
+      <p class="preco">R$9,90</p>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90">Comprar</button>
     </div>
   </div>
 </section>
