--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Café" data-preco="9.90">Comprar</button>
     </div>
+<div class="card-produto">
+      <img src="https://placehold.co/600x400" alt="Produto 3">
+      <h3>Café</h3>
+      <p class="preco">R$9,90</p>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90">Comprar</button>
+    </div>
   </div>
 </section>
    <section id="sobre" class="pagina">
