--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <footer id="rodape">
   <p>&copy; Developer by Lipe Dev. </p>
   <div class="redes-sociais">
-    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://instagram.com/felipezy_9" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="https://github.com/lipe9" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
     <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
   </div>
