--- a/index.html
+++ b/index.html
@@ -95,33 +95,33 @@
   <div class="produtos-container">
     <!-- Card de produto Sanduíche -->
     <div class="card-produto" data-category="comida">
-      <img src="https://via.placeholder.com/600x400/8B4513/FFFFFF?text=Sanduíche" alt="Sanduíche" data-imagem="https://via.placeholder.com/600x400/8B4513/FFFFFF?text=Sanduíche">
+      <img src="https://placehold.co/600x400" alt="Sanduíche" data-imagem="https://placehold.co/600x400">
       <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/8B4513/FFFFFF?text=Sanduíche">Comprar</button>
+      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Sanduiche','9.90','img/')>Comprar</button>
     </div>
 
     <!-- Card de produto Taco -->
     <div class="card-produto" data-category="comida">
-      <img src="https://via.placeholder.com/600x400/FFD700/000000?text=Taco" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
+      <img src="https://placehold.co/600x400" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">Comprar</button>
+      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco" onclick="adicionarAocarrinho('Taco','9.90','img/')>Comprar</button>
     </div>
 
     <!-- Card de produto Refrigerante -->
     <div class="card-produto" data-category="bebida">
-      <img src="https://via.placeholder.com/600x400/0000FF/FFFFFF?text=Refrigerante" alt="Refri" data-imagem="https://via.placeholder.com/600x400/0000FF/FFFFFF?text=Refrigerante">
+      <img src="https://placehold.co/600x400" alt="Refri" data-imagem="https://placehold.co/600x400">
       <h3>Refri</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/0000FF/FFFFFF?text=Refrigerante">Comprar</button>
+      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Refri','9.90','img/')>Comprar</button>
     </div>
     <!-- Card de produto Café -->
 <div class="card-produto" data-category="bebida">
-      <img src="https://via.placeholder.com/600x400/A0522D/FFFFFF?text=Café" alt="Café" data-imagem="https://via.placeholder.com/600x400/A0522D/FFFFFF?text=Café">
+      <img src="https://placehold.co/600x400" alt="Café" data-imagem="https://placehold.co/600x400">
       <h3>Café</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/A0522D/FFFFFF?text=Café">Comprar</button>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Café','9.90','img/')>Comprar</button>
     </div>
   </div>
 </section>
@@ -173,4 +173,5 @@
 <!-- Script específico para o carrinho de compras -->
 <script src="js/carrinho.js"></script>
 </body>
+
 </html>
