--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 </section>
-   <!-- Seção Sobre (placeholder) -->
+   <!-- Seção Sobre -->
    <section id="sobre" class="pagina">
       <h1>Sobre</h1>
    </section>
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
