--- a/index.html
+++ b/index.html
@@ -98,15 +98,16 @@
       <img src="https://placehold.co/600x400" alt="Sanduíche" data-imagem="https://placehold.co/600x400">
       <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Sanduiche','9.90','img/')>Comprar</button>
+      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Sanduiche','9.90','img/')"> Comprar </button>
     </div>
 
     <!-- Card de produto Taco -->
+
     <div class="card-produto" data-category="comida">
       <img src="https://placehold.co/600x400" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco" onclick="adicionarAocarrinho('Taco','9.90','img/')>Comprar</button>
+      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco" onclick="adicionarAocarrinho('Taco','9.90','img/')">Comprar</button>
     </div>
 
     <!-- Card de produto Refrigerante -->
@@ -114,14 +115,14 @@
       <img src="https://placehold.co/600x400" alt="Refri" data-imagem="https://placehold.co/600x400">
       <h3>Refri</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Refri','9.90','img/')>Comprar</button>
+      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Refri','9.90','img/')">Comprar</button>
     </div>
     <!-- Card de produto Café -->
 <div class="card-produto" data-category="bebida">
       <img src="https://placehold.co/600x400" alt="Café" data-imagem="https://placehold.co/600x400">
       <h3>Café</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Café','9.90','img/')>Comprar</button>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Café','9.90','img/')">Comprar</button>
     </div>
   </div>
 </section>
@@ -129,7 +130,7 @@
    <section id="sobre" class="pagina">
       <h1>Sobre</h1>
    </section>
-   <!-- Seção Contato (placeholder) -->
+   <!-- Seção Contato -->
    <section id="contato" class="pagina">
       <h1>Contato</h1>
    </section>
@@ -175,4 +176,5 @@
 </body>
 
 </html>
+
 
