--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <a href="#delivery">Delivery</a>
   <!-- Link para o carrinho com ícone e contador -->
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i></a>
+    <i class="fas fa-shopping-cart"></i>
+    <span id="cart-count">0</span></a>
 </nav>
   <!-- Botão hambúrguer para abrir menu mobile -->
   <div class="hamburger" id="hamburger" onclick="toggleMenu()">
@@ -44,6 +45,8 @@
     <span></span>
   </div>
 </header>
+  <!-- Container para notificações dinâmicas -->
+  <div id="notificacao-container"></div>
   <!-- Menu mobile que aparece ao clicar no hambúrguer -->
   <div class="mobile-menu" id="mobileMenu">
   <a href="#home">Home</a>
@@ -52,14 +55,13 @@
   <a href="#contato">Contato</a>
   <a href="#delivery">Delivery</a>
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i></a>
+    <i class="fas fa-shopping-cart"></i>
+    <span id="cart-count-mobile">0</span></a>
 </div>
 <!-- Conteúdo principal da página -->
 <main>
    <!-- Seção Home com fundo e mensagem de boas-vindas -->
    <section id="home" class="pagina">
-   <!-- Container para notificações dinâmicas -->
-   <div id="notificacao-container"></div>
     <div class="hero">
       <h1>Bem-vindo à Nossa Lanchonete</h1>
       <p>Delicie-se com nossos sanduíches frescos, tacos deliciosos e bebidas refrescantes. O melhor lugar para uma pausa rápida e saborosa!</p>
@@ -98,7 +100,7 @@
       <img src="https://placehold.co/600x400" alt="Sanduíche" data-imagem="https://placehold.co/600x400">
       <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Sanduiche','9.90','img/')"> Comprar </button>
+      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400"> Comprar </button>
     </div>
 
     <!-- Card de produto Taco -->
@@ -107,7 +109,8 @@
       <img src="https://placehold.co/600x400" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco" onclick="adicionarAocarrinho('Taco','9.90','img/')">Comprar</button>
+      
+      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">Comprar</button>
     </div>
 
     <!-- Card de produto Refrigerante -->
@@ -115,14 +118,14 @@
       <img src="https://placehold.co/600x400" alt="Refri" data-imagem="https://placehold.co/600x400">
       <h3>Refri</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Refri','9.90','img/')">Comprar</button>
+      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400">Comprar</button>
     </div>
     <!-- Card de produto Café -->
 <div class="card-produto" data-category="bebida">
       <img src="https://placehold.co/600x400" alt="Café" data-imagem="https://placehold.co/600x400">
       <h3>Café</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400" onclick="adicionarAocarrinho('Café','9.90','img/')">Comprar</button>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400">Comprar</button>
     </div>
   </div>
 </section>
