--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <a href="#contato">Contato</a>
   <a href="#delivery">Delivery</a>
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i>
+    <i class="fas fa-shopping-cart"></i></a>
 </nav>
   <!-- Botão hambúrguer para abrir menu mobile -->
   <div class="hamburger" id="hamburger" onclick="toggleMenu()">
@@ -53,7 +53,7 @@
   <a href="#contato">Contato</a>
   <a href="#delivery">Delivery</a>
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i>
+    <i class="fas fa-shopping-cart"></i></a>
 </div>
 <!-- Conteúdo principal da página -->
 <main>
@@ -176,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
