Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <a href="#contato">Contato</a>
   <a href="#delivery">Delivery</a>
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i></a>
+    Carrinho<span id="cart-count" class="cart-count">0</span></a>
+</a>
 </nav>
   <!-- Botão hambúrguer para abrir menu mobile -->
   <div class="hamburger" id="hamburger" onclick="toggleMenu()">
@@ -53,7 +54,8 @@
   <a href="#contato">Contato</a>
   <a href="#delivery">Delivery</a>
   <a href="#carrinho" class="carrinho-link">
-    <i class="fas fa-shopping-cart"></i></a>
+    Carrinho<span id="cart-count-mobile" class="cart-count">0</span>
+</a>
 </div>
 <!-- Conteúdo principal da página -->
 <main>
