--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <!-- Container para os cards de produtos -->
   <div class="produtos-container">
     <!-- Card de produto -->
-    <div class="card-produto" data-category="comida">
+    <div class="card-produto" data-category="comida" data-details="Delicioso sanduíche fresco com ingredientes selecionados, perfeito para uma refeição rápida e saborosa.">
       <img src="https://placehold.co/600x400" alt="Sanduíche" data-imagem="https://placehold.co/600x400">
       <h3>Sanduíche</h3>
       <p class="preco">R$9,90</p>
@@ -102,23 +102,23 @@
 
     <!-- Card de produto -->
 
-    <div class="card-produto" data-category="comida">
+    <div class="card-produto" data-category="comida" data-details="Taco mexicano autêntico, recheado com carne temperada, queijo e vegetais frescos. Uma explosão de sabores!">
       <img src="https://placehold.co/600x400" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
-      
+
       <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">Comprar</button>
     </div>
 
     <!-- Card de produto -->
-    <div class="card-produto" data-category="bebida">
+    <div class="card-produto" data-category="bebida" data-details="Refrigerante gelado, refrescante e perfeito para acompanhar suas refeições. Disponível em várias opções.">
       <img src="https://placehold.co/600x400" alt="Refri" data-imagem="https://placehold.co/600x400">
       <h3>Refri</h3>
       <p class="preco">R$9,90</p>
       <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400">Comprar</button>
     </div>
     <!-- Card de produto -->
-<div class="card-produto" data-category="bebida">
+<div class="card-produto" data-category="bebida" data-details="Café aromático e quente, preparado com grãos selecionados para um despertar perfeito.">
       <img src="https://placehold.co/600x400" alt="Café" data-imagem="https://placehold.co/600x400">
       <h3>Café</h3>
       <p class="preco">R$9,90</p>
@@ -127,19 +127,26 @@
   </div>
 </section>
    </section>
+   <!-- Seção Sobre -->
+   <section id="sobre" class="pagina">
+    <h1>Sobre Nós</h1>
+    <p>Somos uma lanchonete apaixonada por comida de qualidade. Fundada em 2020, nossa missão é oferecer refeições rápidas e deliciosas para todos os gostos. Utilizamos ingredientes frescos e selecionados para garantir o melhor sabor em cada mordida.</p>
+    <p>Venha nos visitar e experimente nossas especialidades!</p>
+   </section>
    <!-- Seção Contato -->
    <section id="contato" class="pagina">
       <h1>Contato</h1>
-      <h2>desdfs</h2>
+      <p>Entre em contato conosco para dúvidas, sugestões ou pedidos especiais.</p>
+      <p><strong>Telefone:</strong> (11) 1234-5678</p>
+      <p><strong>Email:</strong> contato@lanchonete.com</p>
+      <p><strong>Endereço:</strong> Rua das Delícias, 123 - São Paulo, SP</p>
       <form action="">
-        <input type="text" placeholder="Digite seu nome...">
-        <input type="email" placeholder="Digite seu email...">
-        <input type="text" placeholder="Digite o motivo..." class="motivo">
+        <input type="text" placeholder="Digite seu nome..." required>
+        <input type="email" placeholder="Digite seu email..." required>
+        <textarea placeholder="Digite sua mensagem..." class="motivo" required></textarea>
+        <button type="submit">Enviar</button>
       </form>
    </section>
-   <!-- Seção Sobre -->
-   <section id="sobre" class="pagina">
-    <h1>Sobre</h1>
 </main>
   <!-- Modal do Mini Carrinho para visualizar itens adicionados -->
 <div class="mini-carrinho" id="miniCarrinho">
@@ -159,6 +166,7 @@
     <img id="modalImagem" src="" alt="Produto" class="modal-img">
     <h3 id="modalNome"></h3>
     <p id="modalPreco" class="modal-preco"></p>
+    <p id="modalDetails"></p>
     <div class="modal-buttons">
       <button id="btnAdicionarCarrinho" class="btn-modal">Adicionar ao Carrinho</button>
       <button id="btnComprarAgora" class="btn-modal destaque">Comprar Agora</button>
