--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p>Entre em contato conosco para dúvidas, sugestões ou pedidos especiais.</p>
       <p><strong>Telefone:</strong> (11) 1234-5678</p>
       <p><strong>Email:</strong> contato@lanchonete.com</p>
-      <p><strong>Endereço:</strong> Rua das Delícias, 123 - São Paulo, SP</p>
+      <p><strong>Endereço:</strong> Rua das KJIKH, 123 - ,  CE</p>
       <form action="">
         <input type="text" placeholder="Digite seu nome..." required>
         <input type="email" placeholder="Digite seu email..." required>
