--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 </footer>
 <!-- Script principal para funcionalidades da página -->
 <script src="js/script.js"></script>
+<!-- Script específico para o modal de produtos -->
+<script src="js/modal.js"></script>
 <!-- Script específico para o carrinho de compras -->
 <script src="js/carrinho.js"></script>
 </body>
