--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
       <form action="">
         <input type="text" placeholder="Digite seu nome..." required>
         <input type="email" placeholder="Digite seu email..." required>
-        <textarea placeholder="Digite sua mensagem..." class="motivo" required></textarea>
-        <button type="submit">Enviar</button>
+        <input type="tel" placeholder="Digite seu telefone..." required>
+        <input type="text" placeholder="Digite sua mensagem..." class="texto" required>
+        <input type="button" value="Enviar" class="enviar">
       </form>
    </section>
 </main>
@@ -168,8 +169,8 @@
     <p id="modalPreco" class="modal-preco"></p>
     <p id="modalDetails"></p>
     <div class="modal-buttons">
-      <button id="btnAdicionarCarrinho" class="btn-modal">Adicionar ao Carrinho</button>
       <button id="btnComprarAgora" class="btn-modal destaque">Comprar Agora</button>
+      <button id="btnAdicionarCarrinho" class="btn-modal">Adicionar ao Carrinho</button>
     </div>
   </div>
 </div>
