--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
       <p><strong>Email:</strong> contato@lanchonete.com</p>
       <p><strong>Endereço:</strong> Rua das KJIKH, 123 - ,  CE</p>
       <form action="">
-        <input type="text" placeholder="Digite seu nome..." required>
-        <input type="email" placeholder="Digite seu email..." required>
-        <input type="tel" placeholder="Digite seu telefone..." required>
-        <input type="text" placeholder="Digite sua mensagem..." class="texto" required>
+        <input type="text" placeholder="Nome..." required>
+        <input type="email" placeholder="Email..." required>
+        <input type="tel" placeholder="Telefone..." required>
+        <input type="text" placeholder="Mensagem..." class="texto" required>
         <input type="button" value="Enviar" class="enviar">
       </form>
    </section>
