--- a/index.html
+++ b/index.html
@@ -93,36 +93,36 @@
   <!-- Container para os cards de produtos -->
   <div class="produtos-container">
     <!-- Card de produto -->
-    <div class="card-produto" data-category="comida" data-details="Delicioso sanduíche fresco com ingredientes selecionados, perfeito para uma refeição rápida e saborosa.">
-      <img src="https://placehold.co/600x400" alt="Sanduíche" data-imagem="https://placehold.co/600x400">
-      <h3>Sanduíche</h3>
+    <div class="card-produto" data-category="comida" data-details="Delicioso hambúrguer fresco com ingredientes selecionados, perfeito para uma refeição rápida e saborosa.">
+      <img src="img/IMG-20251006-WA0000.jpg" alt="hambúrguer" data-imagem="img/IMG-20251006-WA0000.jpg">
+      <h3>Hambúrguer</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Sanduíche" data-preco="9.90" data-imagem="https://placehold.co/600x400"> Comprar </button>
+      <button class="btn-comprar" data-nome="Hambúrguer" data-preco="9.90" data-imagem="img/IMG-20251006-WA0000.jpg"> Comprar </button>
     </div>
 
     <!-- Card de produto -->
 
     <div class="card-produto" data-category="comida" data-details="Taco mexicano autêntico, recheado com carne temperada, queijo e vegetais frescos. Uma explosão de sabores!">
-      <img src="https://placehold.co/600x400" alt="Taco" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">
+      <img src="img/IMG-20251006-WA0002.jpg" alt="Taco" data-imagem="img/IMG-20251006-WA0002.jpg">
       <h3>Taco</h3>
       <p class="preco">R$9,90</p>
 
-      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="https://via.placeholder.com/600x400/FFD700/000000?text=Taco">Comprar</button>
+      <button class="btn-comprar" data-nome="Taco" data-preco="9.90" data-imagem="img/IMG-20251006-WA0002.jpg">Comprar</button>
     </div>
 
     <!-- Card de produto -->
     <div class="card-produto" data-category="bebida" data-details="Refrigerante gelado, refrescante e perfeito para acompanhar suas refeições. Disponível em várias opções.">
-      <img src="https://placehold.co/600x400" alt="Refri" data-imagem="https://placehold.co/600x400">
-      <h3>Refri</h3>
+      <img src="img/IMG-20251006-WA0001.jpg" alt="Refri" data-imagem="img/IMG-20251006-WA0001.jpg">
+      <h3>Coca Cola</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Refri" data-preco="9.90" data-imagem="https://placehold.co/600x400">Comprar</button>
+      <button class="btn-comprar" data-nome="Coca Cola" data-preco="9.90" data-imagem="img/IMG-20251006-WA0001.jpg">Comprar</button>
     </div>
     <!-- Card de produto -->
 <div class="card-produto" data-category="bebida" data-details="Café aromático e quente, preparado com grãos selecionados para um despertar perfeito.">
-      <img src="https://placehold.co/600x400" alt="Café" data-imagem="https://placehold.co/600x400">
+      <img src="img/IMG-20251006-WA0003.jpg" alt="Café" data-imagem="img/IMG-20251006-WA0003.jpg">
       <h3>Café</h3>
       <p class="preco">R$9,90</p>
-      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="https://placehold.co/600x400">Comprar</button>
+      <button class="btn-comprar" data-nome="Café" data-preco="9.90" data-imagem="img/IMG-20251006-WA0003.jpg">Comprar</button>
     </div>
   </div>
 </section>
@@ -191,6 +191,7 @@
 <script src="js/carrinho.js"></script>
 </body>
 </html>
+
 
 
 
