--- a/index.html
+++ b/index.html
@@ -136,17 +136,24 @@
    <!-- Seção Contato -->
    <section id="contato" class="pagina">
       <h1>Contato</h1>
-      <p>Entre em contato conosco para dúvidas, sugestões ou pedidos especiais.</p>
-      <p><strong>Telefone:</strong> (11) 1234-5678</p>
-      <p><strong>Email:</strong> contato@lanchonete.com</p>
-      <p><strong>Endereço:</strong> Rua das KJIKH, 123 - ,  CE</p>
-      <form action="">
-        <input type="text" placeholder="Nome..." required>
-        <input type="email" placeholder="Email..." required>
-        <input type="tel" placeholder="Telefone..." required>
-        <input type="text" placeholder="Mensagem..." class="texto" required>
-        <input type="button" value="Enviar" class="enviar">
-      </form>
+      <div class="contato-container">
+        <div class="contato-info">
+          <h2>Informações</h2>
+          <p><i class="fas fa-phone"></i> <strong>Telefone:</strong> (11) 1234-5678</p>
+          <p><i class="fas fa-envelope"></i> <strong>Email:</strong> contato@lanchonete.com</p>
+          <p><i class="fas fa-map-marker-alt"></i> <strong>Endereço:</strong> Rua das KJIKH, 123 - , CE</p>
+        </div>
+        <div class="contato-form">
+          <h2>Envie uma Mensagem</h2>
+          <form action="">
+            <input type="text" placeholder="Nome..." required>
+            <input type="email" placeholder="Email..." required>
+            <input type="tel" placeholder="Telefone..." required>
+            <textarea class="texto" placeholder="Mensagem..." required></textarea>
+            <input type="button" value="Enviar" class="enviar">
+          </form>
+        </div>
+      </div>
    </section>
 </main>
   <!-- Modal do Mini Carrinho para visualizar itens adicionados -->
@@ -176,13 +183,43 @@
 </div>
   <!-- Rodapé com créditos e links para redes sociais -->
   <footer id="rodape">
-  <p>&copy; Developer by Lipe Dev. </p>
-  <div class="redes-sociais">
-    <a href="https://instagram.com/felipezy_9" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-    <a href="https://github.com/lipe9" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-  </div>
-</footer>
+    <div class="rodape-container">
+      <div class="rodape-section">
+        <h3>Sobre Nós</h3>
+        <p>Somos uma lanchonete apaixonada por comida de qualidade. Fundada em 2020, nossa missão é oferecer refeições rápidas e deliciosas para todos os gostos. Utilizamos ingredientes frescos e selecionados para garantir o melhor sabor em cada mordida.</p>
+      </div>
+      <div class="rodape-section">
+        <h3>Contato</h3>
+        <p><i class="fas fa-phone"></i> (11) 1234-5678</p>
+        <p><i class="fas fa-envelope"></i> contato@lanchonete.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Rua das KJIKH, 123 - , CE</p>
+      </div>
+      <div class="rodape-section">
+        <h3>Horários</h3>
+        <p>Seg-Sex: 8h-18h</p>
+        <p>Sáb: 9h-16h</p>
+        <p>Dom: Fechado</p>
+      </div>
+      <div class="rodape-section">
+        <h3>Pagamentos</h3>
+        <div class="formas-pagamento-rodape">
+          <span><i class="fas fa-money-bill-wave"></i></span>
+          <span><i class="fas fa-credit-card"></i></span>
+          <span><i class="fas fa-qrcode"></i></span>
+          <span><i class="fab fa-cc-visa"></i></span>
+          <span><i class="fab fa-cc-mastercard"></i></span>
+          <span><i class="fab fa-cc-amex"></i></span>
+        </div>
+        <h3>Redes Sociais</h3>
+        <div class="redes-sociais">
+          <a href="https://instagram.com/felipezy_9" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/lipe9" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+    <p>&copy; Developer by Felipe.</p>
+  </footer>
 <!-- Script principal para funcionalidades da página -->
 <script src="js/script.js"></script>
 <!-- Script específico para o modal de produtos -->
@@ -191,8 +228,4 @@
 <script src="js/carrinho.js"></script>
 </body>
 </html>
-
-
-
-
 
