Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -130,8 +130,39 @@
    <!-- Seção Sobre -->
    <section id="sobre" class="pagina">
     <h1>Sobre Nós</h1>
-    <p>Somos uma lanchonete apaixonada por comida de qualidade. Fundada em 2020, nossa missão é oferecer refeições rápidas e deliciosas para todos os gostos. Utilizamos ingredientes frescos e selecionados para garantir o melhor sabor em cada mordida.</p>
-    <p>Venha nos visitar e experimente nossas especialidades!</p>
+    <div class="sobre-container">
+      <div class="sobre-intro">
+        <p>Somos uma lanchonete apaixonada por comida de qualidade. Fundada em 2020, nossa missão é oferecer refeições rápidas e deliciosas para todos os gostos. Utilizamos ingredientes frescos e selecionados para garantir o melhor sabor em cada mordida.</p>
+        <p>Venha nos visitar e experimente nossas especialidades!</p>
+      </div>
+      <div class="sobre-missao">
+        <h2>Nossa Missão</h2>
+        <p>Proporcionar uma experiência culinária excepcional, combinando rapidez, qualidade e atendimento amigável. Acreditamos que uma boa refeição pode tornar o dia de qualquer pessoa melhor.</p>
+      </div>
+      <div class="sobre-historia">
+        <h2>Nossa História</h2>
+        <p>Desde nossa fundação, crescemos com o apoio da comunidade local. Começamos como um pequeno ponto de venda e hoje somos referência em lanches rápidos e saborosos na região.</p>
+      </div>
+      <div class="sobre-info">
+        <div class="horario-funcionamento">
+          <h2>Horário de Funcionamento</h2>
+          <p><i class="fas fa-clock"></i> <strong>Segunda a Sexta:</strong> 8h às 18h</p>
+          <p><i class="fas fa-clock"></i> <strong>Sábado:</strong> 9h às 16h</p>
+          <p><i class="fas fa-clock"></i> <strong>Domingo:</strong> Fechado</p>
+        </div>
+        <div class="formas-pagamento">
+          <h2>Formas de Pagamento</h2>
+          <div class="pagamento-icons">
+            <span><i class="fas fa-money-bill-wave"></i> Dinheiro</span>
+            <span><i class="fas fa-credit-card"></i> Cartão de Crédito/Débito</span>
+            <span><i class="fas fa-qrcode"></i> PIX</span>
+            <span><i class="fab fa-cc-visa"></i> Visa</span>
+            <span><i class="fab fa-cc-mastercard"></i> Mastercard</span>
+            <span><i class="fab fa-cc-amex"></i> American Express</span>
+          </div>
+        </div>
+      </div>
+    </div>
    </section>
    <!-- Seção Contato -->
    <section id="contato" class="pagina">
@@ -228,4 +259,8 @@
 <script src="js/carrinho.js"></script>
 </body>
 </html>
+
+
+
+
 
