Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
    </section>
    <!-- Seção Contato -->
    <section id="contato" class="pagina">
-      <h1>Contato</h1>
+      <h1>Contatos</h1>
       <div class="contato-container">
         <div class="contato-info">
           <h2>Informações</h2>
